src/pl/1.0/attribute/attribute-input.md
# Typ wejścia atrybutu

Atrybuty mogą mieć różne typy wejścia, które określają nie tylko, jak wprowadzasz wartości atrybutu, ale również w jaki sposób kupujący mogą wybierać atrybuty w przypadku opcji lub wprowadzać wartości.

Atrybuty produktu to zestaw cech, które definiują dany produkt lub grupę towarów. Oznacza to, że rozmiar, kolor, smak, typ opakowania itp. stanowią atrybuty. Atrybuty produktu nie dotyczą jedynie ogólnego opisu produktu, ale mówią o wartości produktów, która czyni je unikalnymi.

| Właściwość   | Opis                                                                                                                                    |
| ------------ | --------------------------------------------------------------------------------------------------------------------------------------- |
| Text         | Jednowierszowe pole tekstowe.                                                                                                           |
| Text Area    | Wieloliniowe pole tekstowe do wprowadzania akapitów tekstu, takich jak opis produktu.                                                   |
| Boolean      | Wyświetla przełącznik do przełączania między Tak a Nie.                                                                                 |
| Select       | Wyświetla rozwijaną listę wartości, która akceptuje pojedynczy wybór wartości.                                                          |
| Multi Select | Wyświetla rozwijaną listę wartości, która akceptuje wielokrotne wybory.                                                                 |
| Date         | Wyświetla wartość daty w preferowanym formacie.                                                                                         |
| Date Time    | Wyświetla wartość daty i czasu w preferowanym formacie i strefie czasowej.                                                              |
| Image        | Służy do wyświetlania obrazu.                                                                                                           |
| Gallery      | Atrybut Gallery, który umożliwia zarządzanie i wyświetlanie wielu obrazów i wideo na produkt, wzbogacając doświadczenie z mediami produktu. |
| File         | Atrybuty File odnoszą się do specyficznego typu atrybutów, który umożliwia kojarzenie plików z produktem.                                |
| Checkbox     | Reprezentuje stan lub opcję, którą można przełączać.                                                                                    |
| Price        | Ten typ wejścia służy do tworzenia pól cenowych, które są dodatkiem do predefiniowanych atrybutów: Prices.                              |
