src/pl/2.1/attribute/attribute-input.md
# Typ wejścia atrybutu

Atrybuty mogą mieć różne typy wejścia, które określają nie tylko, jak wprowadzać wartości atrybutu, ale również w jaki sposób kupujący mogą wybierać atrybuty w przypadku opcji lub wprowadzać wartości.

Atrybuty produktów to zestaw cech, które definiują dany produkt lub grupę towarów. Oznacza to, że rozmiar, kolor, smak, typ opakowania itp. stanowią atrybuty. Atrybuty produktu nie dotyczą jedynie ogólnego opisu produktu, ale mówią o wartości produktów, która czyni je unikalnymi.

| Właściwość  | Opis                                                                                           |
|-----------------|------------------------------------------------------------------------------------------------------------------------------------|
| Text      | Jednowierszowe pole tekstowe.                                                                            |
| Text Area   | Wieloliniowe pole tekstowe do wprowadzania akapitów tekstu, takich jak opis produktu.                                                                    |
| Boolean    | Wyświetla przełącznik do przełączania między Tak a Nie.                                                                 |
| Select        | Wyświetla rozwijaną listę wartości, która akceptuje pojedynczy wybór. Obsługuje **Swatch Types** (Color, Image, Text) do wyświetlania wizualnych opcji.                      |
| Multi Select        | Wyświetla rozwijaną listę wartości, która akceptuje wielokrotny wybór. Obsługuje **Swatch Types** (Color, Image, Text) do wyświetlania wizualnych opcji.                                                                           |
| Date       | Wyświetla wartość daty w preferowanym formacie.
| Date Time       | Wyświetla wartość daty i czasu w preferowanym formacie i strefie czasowej.
| Image     | Służy do wyświetlania obrazu.
| Gallery | Atrybut Gallery umożliwiający zarządzanie i wyświetlanie wielu obrazów i **wideo** na produkt, wzbogacając doświadczenie z mediami produktu.
| File       | Atrybuty File odnoszą się do specyficznego typu atrybutów, który umożliwia kojarzenie plików z produktem.
| Checkbox       | Reprezentuje stan lub opcję, którą można przełączać.
| Price | Ten typ wejścia jest używany do tworzenia pól cenowych, które są dodatkiem do predefiniowanych atrybutów: Prices.

## Swatch Types (Nowość w v2.0)

Atrybuty **Select** i **Multiselect** obsługują teraz wizualne typy swatchy:

| Swatch Type | Opis |
|-------------|-------------|
| Dropdown | Standardowy wybór z rozwijanej listy (domyślne zachowanie) |
| Color | Wyświetla swatch kolorów — każda opcja pokazuje kolorowy kwadrat |
| Image | Wyświetla miniatury obrazów — każda opcja pokazuje mały obraz |
| Text | Wyświetla etykiety tekstowe jako stylizowane wizualne swatche |

Swatch types są konfigurowane podczas tworzenia lub edycji atrybutu Select/Multiselect. Zobacz [Create Product Attribute](./product-attribute.md#swatch-types), aby zapoznać się z instrukcjami konfiguracji.
